# kb-prep

./: .gitignore  CLAUDE.md  LICENSE  README.md  __init__.py  analyzer.py  anam_client.py  cli.py  corpus_analyzer.py  fixer.py  graph_builder.py  models.py  parser.py  prompts.py  pyproject.toml  recommender.py  requirements.txt  scorer.py
.claude/skills/anam-test/: SKILL.md
.claude/skills/prep-and-eval/: SKILL.md
docs/: manifest-deep-dive.md
docs/guides/: weaviate-ingestion.md
docs/plans/: 2026-03-01-reports-and-concurrency-plan.md
docs/research/: 2026-03-25-ingestion-gap-analysis.md
docs/sops/: ingestion-operations.md
docs/superpowers/plans/: 2026-03-25-chunk-first-ingestion.md
eval/: eval-no-hints.md  eval-with-hints.md  run_eval.py  test-questions.json
hints/: education-k5.txt
src/: __init__.py  analyzer.py  anam_client.py  benchmark.py  chunker.py  cleaner.py  cli.py  config.py  corpus_analyzer.py  export.py  fixer.py  graph_builder.py  manifest_diff.py  models.py  parser.py  prompts.py  recommender.py  scorer.py  web_report.py
test-data/: conftest.py  requirements-test.txt  setup.py
test-data/cross_layer/: test_edge_cases.py  test_performance.py  test_tfidf_consistency.py
test-data/layer1_information_theoretic/: test_heading_content_coherence.py  test_retrieval_aware_score.py  test_shannon_entropy.py
test-data/layer2_spectral_graph/: test_entity_resolution.py  test_pagerank.py  test_spectral_clustering.py
test-data/layer3_semantic_chunking/: test_overlap_selection.py  test_texttiling.py
test-data/layer4_retrieval/: test_bm25_plus.py  test_rocchio_expansion.py  test_silhouette_validation.py
test-data/layer5_rag_quality/: naive_baseline.py  test_end_to_end.py  test_hit_rate.py  test_parse_round_trip.py  test_real_documents.py  test_scorecard.py
test-data/layer6_synthetic_eval/: README.md
test-runs/lesson2-pipeline-20260327-150736/: 01-before-analyze-cli.txt  01-before-manifest.json  01-before-web-report.html  02-fix-cli.txt  03-after-analyze-including-fix-report-cli.txt  03-after-manifest-including-fix-report.json  03-after-web-report-including-fix-report.html  04-after-clean-analyze-cli.txt  04-after-clean-manifest.json  04-after-clean-web-report.html  README-RUN-INDEX.md
test-runs/lesson2-pipeline-20260327-150736/fixed-output/: 4-5.FL.2 Anchor Chart - SMART Goals and Achieving Your Dreams.md  4-5.FL.2 Anchor Chart - SMART Goals and Achieving Your Dreams.meta.json  4-5.FL.2 Handout A. SMART Goals at Home Letter.md  4-5.FL.2 Handout A. SMART Goals at Home Letter.meta.json  4-5.FL.2 Handout B. SMART Goal Brainstorm and Planning.chunks.json  4-5.FL.2 Handout B. SMART Goal Brainstorm and Planning.md  4-5.FL.2 Handout B. SMART Goal Brainstorm and Planning.meta.json  4-5.FL.2 Handout C. SMART Goal Progress Tracker.chunks.json  4-5.FL.2 Handout C. SMART Goal Progress Tracker.md  4-5.FL.2 Handout C. SMART Goal Progress Tracker.meta.json  4-5.FL.2 Lesson - How Can SMART Goals Help You Achieve Your Dreams_.md  manifest.json  (+4 more)
test-runs/lesson2-pipeline-20260327-152004/: 01-before-analyze-cli.txt  01-before-analyze-report.md  01-before-manifest.json  01-before-web-report.html  02-fix-cli.txt  03-after-clean-analyze-cli.txt  03-after-clean-analyze-report.md  03-after-clean-manifest.json  03-after-clean-web-report.html  04-before-after-diff-auto.md  04-before-after-diff.md  README-RUN-INDEX.md
test-runs/lesson2-score-20260327/: cli-output.txt
tests/: test_async_analyzer.py  test_async_fixer.py  test_benchmark.py  test_chunk_export.py  test_chunk_models.py  test_chunk_safety.py  test_chunker.py  test_cleaner.py  test_cli_enrichment.py  test_config.py  test_corpus_analyzer.py  test_docx_table_parser.py  test_export.py  test_graph.py  test_integration.py  test_manifest_diff.py  test_pdf_cleanup.py  test_recommender.py  test_report.py  test_scoring.py  test_split_recommendations.py  test_web_report.py
(+12 files in other folders)
