[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingestgate"
version = "0.1.0"
description = "Retrieval Quality Gate for RAG pipelines with scoring, benchmarking, and ingestion decision support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jonathan Major", email = "jonathan@agenticstudiolabs.com" },
]
keywords = ["rag", "retrieval-quality", "ingestion", "knowledge-base", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "python-docx>=1.2.0",
    "PyMuPDF>=1.27.1",
    "click>=8.3.1",
    "rich>=14.3.3",
    "anthropic>=0.84.0",
    "networkx>=3.4.2,<=3.6.1",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
]

[project.scripts]
ingestgate = "src.cli:cli"

[project.urls]
Homepage = "https://github.com/Agentic-Studio-Labs/ragprep"
Repository = "https://github.com/Agentic-Studio-Labs/ragprep"
Issues = "https://github.com/Agentic-Studio-Labs/ragprep/issues"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
    "ignore:Graph is not fully connected:UserWarning:sklearn",
]
markers = [
    "layer1: Layer 1 information-theoretic tests",
    "layer2: Layer 2 spectral graph tests",
    "layer3: Layer 3 semantic chunking tests",
    "layer4: Layer 4 retrieval tests",
    "layer5: Layer 5 end-to-end RAG quality tests",
    "cross_layer: Cross-layer integration tests",
    "slow: Slow performance benchmark tests",
    "timeout: Test timeout marker",
]
